--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ twitter_username: jekyllrb
 github_username:  HamsaJ
 
 # Build settings
-theme: minima
+theme: cayman
 plugins:
   - jekyll-feed
 
