--- a/_config.yml
+++ b/_config.yml
@@ -27,13 +27,13 @@ description: >- # this means to ignore newlines until "baseurl:"
    Let's expand our knowledge and skills together.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
 github_username:  HamsaJ
 
 # Build settings
-theme: cayman
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
