--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
    Join me as I explore systems design, algorithms, advanced programming concepts, and best practices. 
    Stay ahead in tech with insights on the latest trends and techniques. 
    Let's expand our knowledge and skills together.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  HamsaJ
 
