--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,9 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  HamsaJ
 
 # Build settings
-# theme: minima
-remote_theme: pages-themes/cayman@v0.2.0
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
