--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,7 @@
 
 title: Tech Tackles - Navigating Advanced Topics
 description: >- # this means to ignore newlines until "baseurl:"
-   I welcome you to my blog on advanced topics. 
-   Join me as I explore systems design, algorithms, advanced programming concepts, and best practices. 
-   Stay ahead in tech with insights on the latest trends and techniques. 
-   Let's expand our knowledge and skills together.
+  "Exploring Advanced Topics in Tech: Systems Design, Algorithms, & Best Practices"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  HamsaJ
